# Introduction-to-ROS_TUM

./: .gitignore  README.md
src/controller_pkg/: CMakeLists.txt
src/controller_pkg/include/controller_pkg/: state_estimator.h
src/controller_pkg/src/: controller_node.cpp  state_estimator.cpp
src/mapping/: package.xml  rviz_config.rviz  rviz_config_plan.rviz
src/mapping/launch/: octomap_generator.launch  pcl_generator.launch  semantic_mapping.launch
src/mapping/params/: octomap_params.yaml
src/perception_msgs/: CMakeLists.txt  package.xml
src/perception_msgs/msg/: LightState.msg
src/planner_pkg/: CMakeLists.txt  package.xml
src/planner_pkg/include/planner_pkg/: utils.h  wp_gen.h
src/planner_pkg/launch/: move_base.launch
src/planner_pkg/param/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner_global_GP.yaml  planner_local_TEB.yaml
src/planner_pkg/src/: wp_gen.cpp
src/planner_pkg/srv/: ChangeWPState.srv
src/semantic_perception/: CMakeLists.txt  package.xml
src/semantic_perception/config/: semantic_image.yaml
src/semantic_perception/src/: red_light_detection_node.cpp  semantic_cloud.py
src/simulation/: CMakeLists.txt  ros24.rviz
src/simulation/launch/: simulation.launch  unity_ros.launch
src/simulation/src/: state_estimate_corruptor_node.cpp
src/state_machine/: CMakeLists.txt  package.xml
src/state_machine/src/: state_machine.py
